修改远程服务器地址

--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"appid": "wx92361dd35d7748d2",
-	"projectname": "miniprogram-1",
+	"projectname": "bill",
 	"libVersion": "2.8.1",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
